--- a/Project/empmain.resx
+++ b/Project/empmain.resx
@@ -244,6 +244,102 @@
   <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <data name="pictureBox4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAFTFJREFUeF7t3QOUZV16BuA/tu1MbNu27WRiY5KJk4k1sW1ObPOf2LaTiW3ne+7q
+        r9dbuw/rVnXd6tXvWu/q6nOP996f9z73nAMPX3yJ4ocVv7P4O8V/Kv5P8T+Kf1H8qeIXFN+q+MTFOwVP
+        UnzL4hcWf7roWf+z6Nm9g98ufnvRu3nx4sMVLw1PUfy44l8W/28H/7v4A8XXKD5s8brBPb9W0TN4lqln
+        nOOfFz+m+GTFC8NjFj+p+O/FqYvu4S8WX6p4HfBQxZcp/nJx6ln20Lv7hKJ3eRReuvgnxfEC/1z8juL7
+        Fl+x+HTFJyzqCc9XfIviZxWJs/8t5rGG92cXH7l4qnjUIpE73rv//1bxM4pvXnze4pMWPfvTF1+p+H7F
+        7y7+SzGPxT8uEve7oXfcr+jl5Ql/r/guxUcrbsFDF5+/+LXF/yrmuX6uSCafGp68aCTnvbr3rylqAM+0
+        BY9RfI/iHxbHc3mH3vEm2PHDi3mSfy2+f5FCn8ITFT+w+OqH/03juYo/U8zz/n6RbjoV3Kf4B8W8x58s
+        PntxDq9d/IDiExz+dyseofiAYop8I+2Di5tgZOQNGRVLNwTEl32NqGe1YQasjk8upij4zeLjFK8aj1tk
+        JfV9uUdGzMMU50A897N8kw0L0CF1wDz/OxcXQeGmJfFLxbmWT6Tie1UbVvDuxWwUMnerKLgMuPb3Fvt+
+        dKx3LK7hNYt9DBG8BrrmV4p9DJP5xYqTYAGkAv/d4lpjMAlfvvhnxT7uY4uPXVyDYd7H4LsWrwpkfd+H
+        jnL/4hoo808v9nF/VHzB4ppuIN5TLPqbEXELiJLeic5YE1Mcn98o9jFJThILbGm4u/GvK/Yx/1DUg243
+        GBasxr6PryouvVTW4acV9e4+JvljxWcuLuG5i6lTmMRnQLHmDky3Jbx+cbSapujhlkQRuf1Xxd5fjzsW
+        zM+fKH5LcctI/cxiX99If6ziHPTkHy32/nPUuViXS/igYu9vAJyJaDyw2D9S4ksu/zMWs/H0lG8rfnTx
+        i4qjJ/9exSWQ1b2vkXWs8/TFxT7fzxeXDIbHL+azvF1xCXyT3he9Kz6J9/cjxXQTiLBHL87BSOOX9P5E
+        /QFM2XyJa5r/QcXeVyzH8Eu4ie8p9j56y1KvYxYKMfT+71Q8Bu9Q7HPhLxSNxCnwB3q/hxTnzHrQEdMQ
+        MbLGjsugyQbmPiyB3ux9jc6DiH/JGxuQLF1y+gzZfyv2/mzwKRAVf1vs/d62uAS9o/cVMzoG5L/4UZ8P
+        OXpTjXJvsfdxzBL4Db2vRp7TjymKOIVrIltAtvenl884gSKVS6Csel/iZUlps+F7X1bMEl6gmOd9xGKD
+        CHtw0Y0Tj1vZ52tqlOxsRnLux6dYAk+99/XS5+Al0wn2I0HWAqpM/j6vKPFNpw7fx4YFsLx6XyNgyRrx
+        wIKSH1XMFzwFQz8tnecoNhgQvf1Yvl6xoQF6+z8WlzoXfEOx918zi1+lSJcdevwKWKN9Xm1xCAD2hlew
+        YQFEUfYqo4A9vmZ7bwHHqs/7xjbcwFMV/77Yv52Xf10Up2q8SbF/k79ZQ4pV70wkmP47Fq9c7POKFBxE
+        RG94WhtW8PXF3r9JKbO/DWs37oVu8fAT31js872nDQFi69mOpGBfwjX6enr/GoSExnwIBf5rRYm6zy0a
+        OS9UXBttCffW59MWZ0y1LS+RpznnECbJfCH4RyluwZcV+9glGX1RSOX7pTZsAF24JUklRG8EbQEJ0Mdp
+        izMiiPjZAsqRMcAOzwad4vcVt8SpOJF9zJpjehFwjb7eV9qwEWJP31VMnTdFHXJLMk4uKY85WAK9Qbx/
+        D7xozpWbfLOiEPxXFDlFfU6cM48T31/s/d/ehhsw/JmcRNox/NBiWjyu0dcTWNyLRyryTaSm+W6fWPzh
+        YpqxzOM1/frCxd6f6D8otN4gC7YFbmYJHlw4us9Lvi7BTWcjClg2Xq3Y249lRqJl93q7sPgWeK61wgWd
+        uqWGf+ec0obsat+H3MuZcADvcwlenFABMSdMsgQh9j7vWq6AXmovmIw26hp8lDWxuIXO4VwN8bu+pn/z
+        mlN4pqJouNib3MYcNFg6xWuBRnq29/18G5S19AZm15K8pztySC4lozJod7jQAu5b7H2F/cdhLsaUjeIF
+        CkRq9C18t6KIRIIoFC7pc+qpSyDyel8icA46Vyt+9/l4xTkYcRnP8h4O4ec8wZLH6kX9bLFPwLOfkpFP
+        WUylt/awFH/vawROQfglG0VvZaEcg+yda3pEMUfvK9It9zGFTGPoXEsd/EWKva82uGnlih/1DwoSlsDb
+        7X2RdaRRNYxepye6kf5d4HIyAXMDvP8UHUth67FR1sTmGl602Ody7aUR78XKoPb+RJd6Lb3cs3OaP77Y
+        z4JrkQ8jrfc90yEyFan1l2SkGxNu7/1R68p8pcWGXl6GK0Z4EKOs91cEMTXiEm9ddI8enDg6Bp4lK0zk
+        UJZgVKTIxr8rMv/H7Z5lKXo86kbGy01o5Wx9J1uyJuiSNFOn6AbX8tIZp/KCz9zUAvRkpvZa422BXp73
+        sGai+32q5ipJrC852WJ7TOLc/5Zn4cRki5GFSyCevHCGQA5T4QRBsqVRBhwiuZI+zpC9iBe8F675Q8W+
+        j78prukm9y793FHdJtOdw7kU43K9zMWTLrOFDvyF3tFLXgubg2H/q8U+To9bA52TQU0Nc6yCPgZPU8yY
+        ntDQljDS6xb7mKUcSUIGtY/BOSPmAGlFac/eWaPwvpcsBchj0qmbgt6VjWFUerCrxhsUU0KoF3vq4hI4
+        mr3/walbgHeoYC6lCad8NWIsnpUFXSjCu+RxSpuSqz9enAsmGqoeOsUUipCeCjK+hRy8JZ0iNW1kGF0H
+        H2IGnM5vLua5dcrNVTb8CBHLPAEzT8xmLtm0JP+ZtpkIQ73xlBoDPIOS2ezF+K1FYfI5zD27EJO8eXru
+        +OvF3VMUVGtksUKTaSsxxWybs8TcII9Vr+H0jQ9olJyCmJrDGxVTp6Bn8CzifXr2XCMwdeVE+CRTc2l0
+        zC3lSZMg97TwKGaavHGZPg6OnAInkTnM2hgbAW1jTV2lAt8Kybp0mMfnUMCggTyzZxev8y7mwvKyniTM
+        mj7eBBaHar2x12ylBzAFjBJcEm2nBvcqvM5PmOpgWyhf/ynFteDluSCVqm7KKHChqRtosq8pLja3+Nh1
+        aogR7l1Ih4kqLNSxvzl6NySBoOhSsdyFgrlG0b1hUQhD8bTYjXjTyxZZZde5EebgmURwX67ohXtmz+4d
+        sCKfpXgRxQ93cRd3cRd3ceeD86foTgW8YoznLN7FFUAgUUFgpmCRecxxvjKDxo0pZRGKf9PimYkndyhE
+        KcTtsiGSGsWoue0QRldCmjcjH6KHHDvx5hQh8KrCMqPCKLAqnZxRbzn/pdT1hUPMJgukR4rjSLeu1TFd
+        B0hL8DXGsIiGkagSjAUNlvvcnBV1OyAu0xc2RHnvY9gehafPtZzEiYCHPi4mgMIpiiRG5OxiGcXbErfj
+        qUru94W77oqHKnw9BiM1mJzKdQgqJvT88VmUexr5c0FCVlc24FqR4IUgi+BEMcfAmfC0CSujrKVf3rt4
+        XUIqAqp974o2mLZbYlOSWn2czmgRn0uDZFMG18a5HInnKZqO1vtuOeaUkCtUrE2GTRg9WTjhPFvy7bvh
+        Qj9Y7AspBlhT2kaDAGSuiiODdh0CcOa79z0bHXtgWl523EtZqeJ1in0BQ1F55VaI/mY+ZZxOfRHQOchw
+        eX2iRf2Yv6Wd1Z7tRVaIEFkKNPYgRbvyorVK+F3wYNnLVS/ugSRX1jGtLd2xBGYo68c8888pGrWqB408
+        07ZTd+mlrmuOoVyGLJ+aXuFyHUpVOx3Ib5JaVWkifaDgYXT+5mqZ58D4yXy6hdsuDDlP20NvmY+YcDN9
+        vEnye3ssv0fJK2vtvJnLJWpEo37qt6bfzbDdAwm9Pl7nOKYj3oTZq1k+KYG/B6M8NVHSulymDa8NYz2S
+        qDQC+vgtXHu5W+k86eyp19qj/4jRXJLJaD7aysz5f+ZU7AkJuHgaAiM1FLvdPD8yW/V8N5KHGdcXaRol
+        9xY/tagX6rl6n3AO3UFv0CdEkck5ZjZZ8Y6Yc4wJ+0SYdGs2HvGmSEMK1pwQJbGjZblW1T6C2dvHog52
+        bggc5g0vFYRNIcstt5L40EiqAXO7mVtfXST7lyrLt0JnYTlqeI2oAZmnUz0463E5i8qc9iAXHhDRcK3d
+        cLO5TqLKkTkPdQqUb3qtZq/KOzMhhVrGArIlCmJaeumqoE6NpdT3I8i4B6IUuTDN5jUXE1am7hMYsgrA
+        9iDngjMEFDUn9ERWjSEsEKcwjzU0yn+Nca4edcHI+J33sbYm1oiPKPbxRO7WaegHkL1ZebdnLjeQ22nm
+        bo18sr6MxD5OCSu9cAoYFTTHcY/EoHtzGUXidzMsO9cHas29LyVXz2EIkNFbIMnVxxkpSzOwrgJWaMgR
+        vDZ/coQsYx9LV5pnuAoT4nMJP1MS9oA5e56b1oNyZqyK8VMDMZtzA/d0NjCicplAYfzFOJcLUr59APt/
+        bXmlhGGd07VYSluHdU4H4Pd04mcKflN7a+EXQczbCbowFbQM6R4wwdOMXlxakD3fO+KWZTESKhf7WENy
+        q+LTy9KKWXpI1pueldeRQr2d+XzrgPX1Nc5osKzBJy/6eDMKJlPeRkKu7rx3uT2xIFZSH791lR3I9Q/l
+        WObWaTS8rafS+ybpOk7bnhF9Xghe5nrF5pDsAT8m66MVZN+CjG5ywpbmbU8hJ83vcZ6ISZNY+thb1rG9
+        AfvlNTA7QJOYFfe6bJgrktddm843YnzfdPdNjC22OBlxAqKmudQTfbAVwhN9HGNiSncYGUIevR8Kb4gr
+        mVI3NTnGCL+QYN4MmOjpODOJ6dCtGCWSgombIIP7B7b/0tKuI0ZDwEX2hDbSgZRhHMH6elCx90G+Slo3
+        ZLA1HscJ/JSnEP2WWbXnAbM1LUqidw/MP+ljDYgDzN+gGPuHLQvRJ3I2qpvLZZC2IFeGGFeT08PTGUOW
+        26QSLAivyFvkS0J6Ser4MjKVnOa+DhG652sPuXjCoUGYpFnstnW+dcMD5rATRTVi9iCHvVgXEKF0SYpB
+        NEdvLdrs+uT52JDoXi96JteYnlhb5gokr6iF9PcOFSqj57hladMEq6aPZ/6dUUwbwZfocyi+k9WbEj3C
+        L3s6CxlPhBDBeS6jxzX2Gi1LyASeTmTizhR0YPn1LKNCo4MePtM711YCGqEXZ/ZubTmOOeSaXVNkNUmr
+        nhf0oZKesZH1Tr10aU2rrWAG5yjR4DkK/S1tkNZk07aby2KlSJhr1Tnkwvecm3Ep1q0gNnNV0uafFi/S
+        rzB60/ho0i8WOTtvjoVllXqk2Z+Act1xnj5KP1i+5Ew6O83FLctoNHjgqTjX1ndfgx7EYtEAlK/M4R7x
+        1PBw7kWQ8syDBkQjppa6tW1PJQ1ojMyoJvliTPPUE+j/agwm09efV8ydhZTXwh1eVGbzVH2f5+VdBlST
+        9H1ZFGdO1BkNGt7o6P2brLRnKK5BYwih57EChxnnGsk3WloV4lD2ORYTU+7CHnMJlDFEfkrF1OMX5tDC
+        ZHPZRvpDbx17MX3Dr5lbdWGqMViYEmnW/cq4HLLutqyUdADlTKGnL4KqLVgPuaAMPZExnHuLF2lCHgvO
+        olE/9YKtrTv3gllcFPHov/Ar+GXpgRtdme9BlmLqOkpeA4giWIssj98M5fUZRW2atsWBYf9nsr+pMmRu
+        FaCrAodyqtqFCSzcPfWCdCyKeFx4B5UumZvObB2jBkTcZTicB9AFcumZKGouyUYFxQc7uuDByGCrXTNp
+        lY2msUDZku3Wj5JnlhW8jAZ1H3pprs/VtKThXFW6l6tKf9QvRs/45U5R3ouogFmFoS8nkXnxpMUjx+ls
+        RJwhKtM3Dn3GgtpYX9NM36fJxL0sXeQFC3ZOzVtxr3NVmEpMjf5R/DXppnOJomOgfMUQ7dHB+aHwyWI9
+        XUnPqHvmaLLL1CyrpnMvWiAroN+EXuY+59rzVjJbh/SLKMBcfEzlZU4vQLrztjdGgsISs5kanj5KMpWX
+        MIqMjHG0oEbUw768mKOQpXIeEE+UsnPoPEThXK6bCJ2at8K5Ja6nTHjnzzUpFWKfNOS18+EywJbZwGZ+
+        wSyjxRrnPDVYdBSxl9egByWRppxdL3ict9IUT5taKZS11PtwFU4aQg99s8zi7J1MwP4NxabSKtEA+buQ
+        gnwHx21P2ISXPU7kR4tNKomdgvw8036cYWtUE9WZLCPW8pwnjVxHXSAvkYUTHnR0kMj9/n2k3ronv8Ba
+        M/oy0IeuK96U36FKqDsjPkfxquKSAygGlr+ZbXvSYJH1zXKSiATQwzPCqaa3f4Ox/neKW74RNcKL9yJH
+        g0NDfUhxzszO55ij53HfJw0Job7h7o0cMF+d6e2smTEHwRfJ38WiLOCSE3ycb2+ZTUM98lhFj0o66ZBR
+        gftS3bhvUqxqV03uVcGD+R7s1EM0x0wa8zS/HJr1vxRxZiJNEqJop3q2fVWZ+GrOlAK3jZOadbVN1lIH
+        U5nxWWLkedSlEYH0jOTd1PlPFhypnLmaZBaPcaQMQbCQMjVLrOUS5k2ZNhm3FHtGYv/OWZ37lpbGVOA2
+        6hdizSjKDoBvU7z2MFKkhfW0VIKssASvPH8fv3+VH1ycIj+jkdYPesFLlYwspzHKMNLomPJHri0ovVao
+        XnyajzzcpfpfhkAG+HjWnMwMfQhndOyMFZYF0E3pZZ82nTKd87u+SfdM/805ldcWRErmBPKz3Okoaqz8
+        WBfwP/p3L74LL2TYTLrs3z6ymDBVIL+D0uT30AUp5oRD+nfXEAQ1sqeK9O4YpKWkl+vFSl3SFJVtTKxV
+        UGZ1h9TpCIp5rpJROF6jaeBMM5y8k3dR4GyNn0EaKeDYoRI9+EuK/dtYQel38a/+XY5irlRUoHD8NNMU
+        jdBTXof+wkFW5yIu+SL6b5FTIkOmL7en4obREEDixkicWsqbjsl9RzrX3jn3dwSIEdk2ZaIqWwTptnjE
+        GYBkCOQHvEZ2KU/GyFSu9O8iwEpxjFjiTMRg76oMdzSE8cWO8qWO9JI5fAoUsjrGqODRT/kplL7RZhpd
+        fs5VOQ6w5q6Vc3e7YbSYTaQ8RqEFpy+V+hRl8cDIMyrGCo+RjIjxS593sQNEyVz+nkM3hk9EAMbC5abK
+        zDS57+KcYAwIrej9XqpK9vsXlwoKKHEKXsgeibnLnLBzwbjnnv8HpBVKgQn/FmEAAAAASUVORK5CYII=
+</value>
+  </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>25</value>
   </metadata>
